syntax = "proto3";
import "common/transaction.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "TransactionsWriteMicroservice";
package TransactionsWriteMicroservice;

service TransactionsWrite {
  rpc Create (CreateTransactionRequest) returns (CreateTransactionResult);
  rpc BatchCreate (BatchCreateTransactionRequest) returns (google.protobuf.Empty);
  rpc Setup(SetupRequest) returns (google.protobuf.Empty);
  rpc SetupAppend(SetupRequest) returns (google.protobuf.Empty);
}

message CreateTransactionRequest {
  string flowId = 1;
  string title = 2;
  float amount = 3;
  string recipient = 4;
  string sender = 5;
  string paymentId = 6;
  string cardId = 7;
}

message CreateTransactionResult {
  Transaction transaction = 1;
}

message BatchCreateTransactionRequest {
  string flowId = 1;
  repeated CreateTransactionRequest requests = 2;
}

message SetupRequest {
  repeated Transaction transactions = 1;
}